src/main/java/com/example/urlshortenerservice/Gateway/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener
  labels:
    app: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlshortener
  template:
    metadata:
      name: urlshortener
      labels:
        app: urlshortener
    spec:
      containers:
        - name: urlshortener
          image: urlshortenerservice-url:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: urlshortener
---
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
  namespace: default
  labels:
    app: urlshortener
    service: urlshortener
spec:
  selector:
    app: urlshortener
  ports:
    - name: http
      port: 8080 # The port that the service is running on in the cluster
      targetPort: 8080 # The port exposed by the pod, containerport
  type: LoadBalancer
